[package]
name = "tdigest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "2.8.0"
serde = { package = "serde", version = "1.0", optional = true, default-features = false }

[features]
use_serde = ["serde", "serde/derive", "ordered-float/serde"]
